--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
+  uuid: ^4.0.0
+  intl: ^0.18.1
+  transparent_image: ^2.0.1
+  flutter_riverpod: ^2.3.7
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
